# date-adapter

./: CMakeLists.txt  README.md
cmake/: develop_dependencies.cmake  unit_testing.cmake
metaconfigure/: description.json  description.py
